[project]
name = "vibecoding"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
streamlit = "^1.27.2"
plotly = "^5.17.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
nltk = "^3.8.1"
scikit-learn = "^1.3.1"
wordcloud = "^1.9.2"
geopandas = "^0.14.0"
plotly-express = "^0.4.1"
spacy = "^3.7.2"
textblob = "^0.17.1"
joblib = "^1.3.2"
watchdog = "^3.0.0"
openpyxl = "^3.1.2"
pyarrow = "^14.0.1"
pylint = "^3.0.2"
black = "^23.10.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
